test/testdata/functions/invalid_binary_op_error_builtin.lox
clock - 1; // error: - operator cannot be used with types function and number
